# libmatcal2

./: .gitignore  AUTHORS  Makefile.am  README.md  Readme.es.md  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  arithmetics.c  arithmetics.h  ast.list  clonable.c  clonable.h  closure.c  compiler.h  compiler_override.h  compiler_x86_64.dasc.c  compiler_x86_64.h  core.c  core.h  coreext.h  corexpr.h  expression.c  expression.h  generic.c  generic.h  libast.h  libmatcal.h  libmatcalext.h  libmatlib.h  libmatree.h  matcal.c  matcal.list  matlib.list  matree.list  node.c  node.h  number.c  number.h  numberconv.c  numberext.h  object.c  object.h  potency.c  potency.h  rules.c  (+10 more)
src/sharp/: .gitignore  Makefile.am  sources.api  sources.metadata
src/sharp/MatcalSharp/: .gitignore  MatcalSharp.csproj
src/sharp/MatcalSharp/Matlib/: Matlib.cs
src/sharp/nupkg/: .gitignore  MatcalSharp.nuspec.in  pack.sh  push.sh  update.sh
test/: .gitignore  Makefile.am  test.c
